🧪 test (appointment): agregar pruebas e2e para agendamiento
incorporar flujo completo de agendamiento, ajustes en pruebas de integración y configuración del entorno de testing